# wordle-helper-bot

./: .env  .gitignore  pyproject.toml
wordle_helper_bot/: bot.py  guesser.py  state.py
